--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ failure = "0.1.8"
 spinners = "2.0.0"
 seahorse = "2.0"
 dotenv = "0.15"
-notify-rust = "4"
 dirs = "4"
 chrono = "0.4"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+notify-rust = "4"
